API updates/fixes + RSS
